--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -1,8 +1,4 @@
 version: '2'
-# volumes:
-#     mysql:
-#
-#     confdata:
 
 services:
     confdata:
@@ -10,19 +6,110 @@ services:
         # This the container built from the Dockerfile in this project
         image: eristoddle/wso2-dev-config
         container_name: confdata
-        # This syncs the data from this container to the host so containers below can mount the folder and shuts down
-        # NOTE: There is other ways to do this with named volumes and volume drivers that may be better
         labels:
             io.rancher.container.start_once: true
             io.rancher.container.pull_image: always
         volumes:
-            - /tmp/wso2-conf:/conf
+            - /opt:/conf
     mysql:
         image: mysql:5.7.10
         environment:
             - MYSQL_ROOT_PASSWORD=password
         depends_on:
             - confdata
+        volumes:
+            - /opt/scripts/mysql:/docker-entrypoint-initdb.d
+            - /opt/mysql/:/etc/mysql/conf.d
+            - /var/lib/mysql
+
+    esb:
+        image: eristoddle/wso2esb:5.0.0
+        ports:
+            - 9443:9443
+            - 9763:9763
+        depends_on:
+            - confdata
+        volumes:
+            - /opt/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2esb/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
+            - /opt/wso2esb/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
+
+    brs:
+        image: eristoddle/wso2esb:5.0.0
+        ports:
+            - 9444:9443
+            - 9764:9763
+        depends_on:
+            - confdata
+        volumes:
+            - /opt/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
+            - /opt/brs/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
+            - /opt/brs/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
+
+    greg:
+        image: eristoddle/wso2greg:5.3.0
+        command: -Dsetup
+        ports:
+            - 9445:9443
+            - 9765:9763
+        depends_on:
+            - confdata
+        volumes:
+            - /opt/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
+            - /opt/wso2greg/repository/conf/registry.xml:/opt/wso2greg-5.3.0/repository/conf/registry.xml
+
+    dss:
+        image: eristoddle/wso2dss:3.5.1
+        ports:
+            - 9446:9443
+            - 9766:9763
+        depends_on:
+            - confdata
+        volumes:
+            - /opt/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
+            - /opt/wso2dss/repository/conf/security/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
+
+    is:
+        image: eristoddle/wso2is:5.2.0
+        hostname: wso2identity
+        ports:
+            - 9447:9443
+            - 9767:9763
+        depends_on:
+            - confdata
+        volumes:
+            - /opt/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2is/repository/conf/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
+            - /opt/wso2is/repository/conf/registry.xml:/opt/wso2is-5.2.0/repository/conf/registry.xml
+            - /opt/wso2is/repository/conf/user-mgt.xml:/opt/wso2is-5.2.0/repository/conf/user-mgt.xml
+            - /opt/wso2is/repository/conf/security/sso-idp-config.xml:/opt/wso2is-5.2.0/repository/conf/security/sso-idp-config.xml
+
+    am:
+        image: eristoddle/wso2am:2.0.0
+        ports:
+            - 9448:9443
+            - 9768:9763
+        depends_on:
+            - confdata
+        volumes:
+            - /opt/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2am/repository/conf/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
+            - /opt/wso2am/repository/conf/security/authenticators.xml:/opt/wso2am-2.0.0/repository/conf/security/authenticators.xml
+
+    as:
+        image: eristoddle/wso2as:5.3.0
+        ports:
+            - 9449:9443
+            - 9769:9763
+        depends_on:
+            - confdata
+        volumes:
+            - /opt/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
+            - /opt/wso2as/repository/conf/security/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
+
         volumes:
             - /tmp/wso2-conf/scripts/mysql:/docker-entrypoint-initdb.d
             - /tmp/wso2-conf/mysql/:/etc/mysql/conf.d
