--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -30,9 +30,9 @@ services:
         depends_on:
             - confdata
         volumes:
-            - /opt/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2esb/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
-            - /opt/wso2esb/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
+            - /opt/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2esb/repository/conf/registry.xml:/opt/wso2esb/repository/conf/registry.xml
+            - /opt/wso2esb/repository/conf/security/authenticators.xml:/opt/wso2esb/repository/conf/security/authenticators.xml
 
     brs:
         image: eristoddle/wso2esb:5.0.0
@@ -42,9 +42,9 @@ services:
         depends_on:
             - confdata
         volumes:
-            - /opt/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
-            - /opt/brs/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
-            - /opt/brs/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
+            - /opt/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb/repository/conf/datasources/master-datasources.xml
+            - /opt/brs/repository/conf/registry.xml:/opt/wso2esb/repository/conf/registry.xml
+            - /opt/brs/repository/conf/security/authenticators.xml:/opt/wso2esb/repository/conf/security/authenticators.xml
 
     greg:
         image: eristoddle/wso2greg:5.3.0
@@ -55,9 +55,9 @@ services:
         depends_on:
             - confdata
         volumes:
-            - /opt/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
-            - /opt/wso2greg/repository/conf/registry.xml:/opt/wso2greg-5.3.0/repository/conf/registry.xml
+            - /opt/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg/repository/conf/security/authenticators.xml
+            - /opt/wso2greg/repository/conf/registry.xml:/opt/wso2greg/repository/conf/registry.xml
 
     dss:
         image: eristoddle/wso2dss:3.5.1
@@ -67,9 +67,9 @@ services:
         depends_on:
             - confdata
         volumes:
-            - /opt/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
-            - /opt/wso2dss/repository/conf/security/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
+            - /opt/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2dss/repository/conf/registry.xml:/opt/wso2dss/repository/conf/registry.xml
+            - /opt/wso2dss/repository/conf/security/authenticators.xml:/opt/wso2dss/repository/conf/security/authenticators.xml
 
     is:
         image: eristoddle/wso2is:5.2.0
@@ -80,11 +80,11 @@ services:
         depends_on:
             - confdata
         volumes:
-            - /opt/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2is/repository/conf/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
-            - /opt/wso2is/repository/conf/registry.xml:/opt/wso2is-5.2.0/repository/conf/registry.xml
-            - /opt/wso2is/repository/conf/user-mgt.xml:/opt/wso2is-5.2.0/repository/conf/user-mgt.xml
-            - /opt/wso2is/repository/conf/security/sso-idp-config.xml:/opt/wso2is-5.2.0/repository/conf/security/sso-idp-config.xml
+            - /opt/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2is/repository/conf/carbon.xml:/opt/wso2is/repository/conf/carbon.xml
+            - /opt/wso2is/repository/conf/registry.xml:/opt/wso2is/repository/conf/registry.xml
+            - /opt/wso2is/repository/conf/user-mgt.xml:/opt/wso2is/repository/conf/user-mgt.xml
+            - /opt/wso2is/repository/conf/security/sso-idp-config.xml:/opt/wso2is/repository/conf/security/sso-idp-config.xml
 
     am:
         image: eristoddle/wso2am:2.0.0
@@ -94,9 +94,9 @@ services:
         depends_on:
             - confdata
         volumes:
-            - /opt/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2am/repository/conf/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
-            - /opt/wso2am/repository/conf/security/authenticators.xml:/opt/wso2am-2.0.0/repository/conf/security/authenticators.xml
+            - /opt/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2am/repository/conf/registry.xml:/opt/wso2am/repository/conf/registry.xml
+            - /opt/wso2am/repository/conf/security/authenticators.xml:/opt/wso2am/repository/conf/security/authenticators.xml
 
     as:
         image: eristoddle/wso2as:5.3.0
@@ -106,99 +106,6 @@ services:
         depends_on:
             - confdata
         volumes:
-            - /opt/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
-            - /opt/wso2as/repository/conf/security/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
-
-        volumes:
-            - /tmp/wso2-conf/scripts/mysql:/docker-entrypoint-initdb.d
-            - /tmp/wso2-conf/mysql/:/etc/mysql/conf.d
-            - /var/lib/mysql
-
-    esb:
-        image: eristoddle/wso2esb:5.0.0
-        ports:
-            - 9443:9443
-            - 9763:9763
-        depends_on:
-            - confdata
-        volumes:
-            - /tmp/wso2-conf/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
-            - /tmp/wso2-conf/wso2esb/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
-            - /tmp/wso2-conf/wso2esb/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
-
-    brs:
-        image: eristoddle/wso2esb:5.0.0
-        ports:
-            - 9444:9443
-            - 9764:9763
-        depends_on:
-            - confdata
-        volumes:
-            - /tmp/wso2-conf/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
-            - /tmp/wso2-conf/brs/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
-            - /tmp/wso2-conf/brs/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
-
-    greg:
-        image: eristoddle/wso2greg:5.3.0
-        command: -Dsetup
-        ports:
-            - 9445:9443
-            - 9765:9763
-        depends_on:
-            - confdata
-        volumes:
-            - /tmp/wso2-conf/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
-            - /tmp/wso2-conf/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
-            - /tmp/wso2-conf/wso2greg/repository/conf/registry.xml:/opt/wso2greg-5.3.0/repository/conf/registry.xml
-
-    dss:
-        image: eristoddle/wso2dss:3.5.1
-        ports:
-            - 9446:9443
-            - 9766:9763
-        depends_on:
-            - confdata
-        volumes:
-            - /tmp/wso2-conf/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1/repository/conf/datasources/master-datasources.xml
-            - /tmp/wso2-conf/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
-            - /tmp/wso2-conf/wso2dss/repository/conf/security/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
-
-    is:
-        image: eristoddle/wso2is:5.2.0
-        hostname: wso2identity
-        ports:
-            - 9447:9443
-            - 9767:9763
-        depends_on:
-            - confdata
-        volumes:
-            - /tmp/wso2-conf/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
-            - /tmp/wso2-conf/wso2is/repository/conf/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
-            - /tmp/wso2-conf/wso2is/repository/conf/registry.xml:/opt/wso2is-5.2.0/repository/conf/registry.xml
-            - /tmp/wso2-conf/wso2is/repository/conf/user-mgt.xml:/opt/wso2is-5.2.0/repository/conf/user-mgt.xml
-            - /tmp/wso2-conf/wso2is/repository/conf/security/sso-idp-config.xml:/opt/wso2is-5.2.0/repository/conf/security/sso-idp-config.xml
-
-    am:
-        image: eristoddle/wso2am:2.0.0
-        ports:
-            - 9448:9443
-            - 9768:9763
-        depends_on:
-            - confdata
-        volumes:
-            - /tmp/wso2-conf/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
-            - /tmp/wso2-conf/wso2am/repository/conf/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
-            - /tmp/wso2-conf/wso2am/repository/conf/security/authenticators.xml:/opt/wso2am-2.0.0/repository/conf/security/authenticators.xml
-
-    as:
-        image: eristoddle/wso2as:5.3.0
-        ports:
-            - 9449:9443
-            - 9769:9763
-        depends_on:
-            - confdata
-        volumes:
-            - /tmp/wso2-conf/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
-            - /tmp/wso2-conf/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
-            - /tmp/wso2-conf/wso2as/repository/conf/security/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
+            - /opt/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as/repository/conf/datasources/master-datasources.xml
+            - /opt/wso2as/repository/conf/registry.xml:/opt/wso2as/repository/conf/registry.xml
+            - /opt/wso2as/repository/conf/security/authenticators.xml:/opt/wso2as/repository/conf/security/authenticators.xml
