--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -43,7 +43,7 @@ services:
             - /opt/wso2is/repository/conf/identity/service-providers:/mnt/wso2is/repository/conf/identity/service-providers
 
     esb:
-        image: eristoddle/wso2esb:5.0.0
+        image: eristoddle/wso2esb_features:5.0.0
         ports:
             - 9444:9444
             - 9764:9764
