--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -29,7 +29,7 @@ services:
             - /var/lib/mysql
 
     is:
-        image: eristoddle/wso2is:5.2.0
+        image: eristoddle/wso2is_features:5.2.0
         hostname: wso2identity
         ports:
             - 9443:9443
@@ -40,7 +40,6 @@ services:
             - /opt/wso2is/repository/conf/registry.xml:/mnt/wso2is/repository/conf/registry.xml
             - /opt/wso2is/repository/conf/user-mgt.xml:/mnt/wso2is/repository/conf/user-mgt.xml
             - /opt/wso2is/repository/conf/security/sso-idp-config.xml:/mnt/wso2is/repository/conf/security/sso-idp-config.xml
-            - /opt/wso2is/repository/conf/identity/service-providers:/mnt/wso2is/repository/conf/identity/service-providers
 
     esb:
         image: eristoddle/wso2esb_features:5.0.0
@@ -89,16 +88,16 @@ services:
             - /opt/wso2dss/repository/conf/security/authenticators.xml:/mnt/wso2dss/repository/conf/security/authenticators.xml
             - /opt/wso2dss/repository/conf/carbon.xml:/mnt/wso2dss/repository/conf/carbon.xml
 
-    apim:
-        image: eristoddle/wso2am:2.0.0
-        ports:
-            - 9448:9448
-            - 9768:9768
-        volumes:
-            - /opt/wso2am/repository/conf/datasources/master-datasources.xml:/mnt/wso2am/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2am/repository/conf/registry.xml:/mnt/wso2am/repository/conf/registry.xml
-            - /opt/wso2am/repository/conf/security/authenticators.xml:/mnt/wso2am/repository/conf/security/authenticators.xml
-            - /opt/wso2am/repository/conf/carbon.xml:/mnt/wso2am/repository/conf/carbon.xml
+    # apim:
+    #     image: eristoddle/wso2am:2.0.0
+    #     ports:
+    #         - 9448:9448
+    #         - 9768:9768
+    #     volumes:
+    #         - /opt/wso2am/repository/conf/datasources/master-datasources.xml:/mnt/wso2am/repository/conf/datasources/master-datasources.xml
+    #         - /opt/wso2am/repository/conf/registry.xml:/mnt/wso2am/repository/conf/registry.xml
+    #         - /opt/wso2am/repository/conf/security/authenticators.xml:/mnt/wso2am/repository/conf/security/authenticators.xml
+    #         - /opt/wso2am/repository/conf/carbon.xml:/mnt/wso2am/repository/conf/carbon.xml
 
     as:
         image: eristoddle/wso2as:5.3.0
